--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,2 +1,11 @@
 @charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
+
+table{
+	margin: 1em auto;
+	text-align: left;
+}
+
+table thead{
+	font-variant: small-caps;
+}
