Tweak c17 table formatting, local.css

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -43,17 +43,15 @@ table{
 	text-align: initial;
 }
 
-td + td{
+td + td,
+th + th{
 	padding-left: .5em;
 }
 
-thead{
-	font-variant: small-caps;
-	text-align: left;
-}
-
 th{
+	font-variant: small-caps;
 	font-weight: normal;
+	text-align: initial;
 }
 /* end table rules */
 
